fix: search cancel button alignment

--- a/themes/kinder/styles/section.search.scss
+++ b/themes/kinder/styles/section.search.scss
@@ -24,6 +24,11 @@
           [ui-slot="input-wrapper"] {
             background-color: var(--bg-shade-color);
           }
+
+          [ui-slot="input-inline-button"] {
+            width: 24px;
+            height: 100%;
+          }
         }
       }
 
